--- a/src/app/components/cotacao/cotacao.component.scss
+++ b/src/app/components/cotacao/cotacao.component.scss
@@ -4,3 +4,18 @@
   display: inline-flex;
   min-width: 100%;
 }
+
+.mat-column-nomeHospital {
+  word-wrap: break-word !important;
+  white-space: unset !important;
+  flex: 0 0 12% !important;
+  width: 12% !important;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  word-break: break-word;
+
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
