--- a/src/app/components/produto/produto.component.scss
+++ b/src/app/components/produto/produto.component.scss
@@ -1,82 +1,86 @@
-.mat-footer-row,
-.mat-header-row,
-.mat-row {
-  display: inline-flex;
-  min-width: 100%;
+//.mat-footer-row,
+//.mat-header-row,
+//.mat-row {
+//  display: inline-flex;
+//  min-width: 100%;
+//}
+
+.mat-header-cell {
+  height: 75px;
 }
 
-.mat-column-id {
-  word-wrap: break-word !important;
-  white-space: unset !important;
-  flex: 0 0 2% !important;
-  width: 2% !important;
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-  word-break: break-word;
-
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
-  hyphens: auto;
-}
-
-.mat-column-operadora {
-  word-wrap: break-word !important;
-  white-space: unset !important;
-  flex: 0 0 7% !important;
-  width: 7% !important;
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-  word-break: break-word;
-
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
-  hyphens: auto;
-}
-
-.mat-column-nome {
-  word-wrap: break-word !important;
-  white-space: unset !important;
-  flex: 0 0 7% !important;
-  width: 7% !important;
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-  word-break: break-word;
-
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
-  hyphens: auto;
-}
-
-.mat-column-abrangencia {
-  word-wrap: break-word !important;
-  white-space: unset !important;
-  flex: 0 0 7.5% !important;
-  width: 7.5% !important;
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-  word-break: break-word;
-
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
-  hyphens: auto;
-}
-
-.mat-column-reembolso {
-  word-wrap: break-word !important;
-  white-space: unset !important;
-  flex: 0 0 6% !important;
-  width: 6% !important;
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-  word-break: break-word;
-
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
-  hyphens: auto;
-}
-
+//.mat-column-id {
+//  word-wrap: break-word !important;
+//  white-space: unset !important;
+//  flex: 0 0 1% !important;
+//  width: 1% !important;
+//  overflow-wrap: break-word;
+//  word-wrap: break-word;
+//  word-break: break-word;
+//
+//  -ms-hyphens: auto;
+//  -moz-hyphens: auto;
+//  -webkit-hyphens: auto;
+//  hyphens: auto;
+//}
+//
+//.mat-column-operadora {
+//  word-wrap: break-word !important;
+//  white-space: unset !important;
+//  flex: 0 0 7% !important;
+//  width: 7% !important;
+//  overflow-wrap: break-word;
+//  word-wrap: break-word;
+//  word-break: break-word;
+//
+//  -ms-hyphens: auto;
+//  -moz-hyphens: auto;
+//  -webkit-hyphens: auto;
+//  hyphens: auto;
+//}
+//
+//.mat-column-nome {
+//  word-wrap: break-word !important;
+//  white-space: unset !important;
+//  flex: 0 0 7% !important;
+//  width: 7% !important;
+//  overflow-wrap: break-word;
+//  word-wrap: break-word;
+//  word-break: break-word;
+//
+//  -ms-hyphens: auto;
+//  -moz-hyphens: auto;
+//  -webkit-hyphens: auto;
+//  hyphens: auto;
+//}
+//
+//.mat-column-abrangencia {
+//  word-wrap: break-word !important;
+//  white-space: unset !important;
+//  flex: 0 0 7.5% !important;
+//  width: 7.5% !important;
+//  overflow-wrap: break-word;
+//  word-wrap: break-word;
+//  word-break: break-word;
+//
+//  -ms-hyphens: auto;
+//  -moz-hyphens: auto;
+//  -webkit-hyphens: auto;
+//  hyphens: auto;
+//}
+//
+//.mat-column-reembolso {
+//  word-wrap: break-word !important;
+//  white-space: unset !important;
+//  flex: 0 0 6% !important;
+//  width: 6% !important;
+//  overflow-wrap: break-word;
+//  word-wrap: break-word;
+//  word-break: break-word;
+//
+//  -ms-hyphens: auto;
+//  -moz-hyphens: auto;
+//  -webkit-hyphens: auto;
+//  hyphens: auto;
+//}
+//
