--- a/src/app/components/produto/produto.component.html
+++ b/src/app/components/produto/produto.component.html
@@ -14,7 +14,7 @@
     <br/>
 
     <mat-card-content>
-      <div [style.height]="produtoSelecionado ? '430px' : '100%'" [style.width]="produtoSelecionado || filtrandoProduto() ? (window.innerWidth * 0.70) + 'px' : (window.innerWidth * 0.95) + 'px'" style="overflow: auto;">
+      <div [style.height]="produtoSelecionado ? (window.innerHeight * 0.75) + 'px' : window.innerHeight + 'px'" [style.width]="produtoSelecionado || filtrandoProduto() ? (window.innerWidth * 0.70) + 'px' : (window.innerWidth * 0.95) + 'px'" style="overflow: auto;">
         <mat-table [style.width]="getTableWidth()" #sortProduto="matSort" [dataSource]="dataSourceProduto" matSort>
           <ng-container matColumnDef="id">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
@@ -139,7 +139,7 @@
             </mat-cell>
           </ng-container>
 
-          <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+          <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
           <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
         </mat-table>
       </div>
