Destq opcao selected

--- a/src/app/components/opcao/opcao.component.scss
+++ b/src/app/components/opcao/opcao.component.scss
@@ -1,394 +1,9 @@
-//.mat-footer-row,
-//.mat-header-row,
-//.mat-row {
-//  display: inline-flex;
-//  min-width: 100%;
-//  //border-bottom-width: 0px;
-//}
-
 .mat-header-cell {
   //color: white;
   //background-color: black;
   height: 75px;
 }
 
-//.mat-column-id {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 2% !important;
-//  width: 2% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//  word-break: break-word;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-estado {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 2% !important;
-//  width: 2% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//  word-break: break-word;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//
-//.mat-column-administradora {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 3.5% !important;
-//  width: 3.5% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//  word-break: break-word;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-tabela {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 3.5% !important;
-//  width: 3.5% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//  word-break: break-word;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-operadora {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 3.5% !important;
-//  width: 3.5% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//  word-break: break-word;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-idadeMin {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 1.5% !important;
-//  width: 1.5% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//  word-break: break-word;
-//  text-align: center;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-idadeMax {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 1.5% !important;
-//  width: 1.5% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//  word-break: break-word;
-//  text-align: center;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-qtdMinVidas {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 1.8% !important;
-//  width: 1.8% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//  word-break: break-word;
-//  text-align: center;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-qtdMinTitulares {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 2% !important;
-//  width: 2% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//  word-break: break-word;
-//  text-align: center;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//
-//.mat-column-coparticipacao {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 2% !important;
-//  width: 2% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//
-//  word-break: break-word;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-acomodacao {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 3% !important;
-//  width: 3% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//
-//  word-break: break-word;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-abrangencia {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 3% !important;
-//  width: 3% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//
-//  word-break: break-word;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-produto {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 3% !important;
-//  width: 3% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//
-//  word-break: break-word;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-valor0a18anos {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 3% !important;
-//  width: 3% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//
-//  word-break: break-word;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-valor19a23anos {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 3% !important;
-//  width: 3% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//
-//  word-break: break-word;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-valor24a28anos {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 3% !important;
-//  width: 3% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//
-//  word-break: break-word;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-valor29a33anos {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 3% !important;
-//  width: 3% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//
-//  word-break: break-word;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-valor34a38anos {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 3% !important;
-//  width: 3% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//
-//  word-break: break-word;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-valor39a43anos {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 3% !important;
-//  width: 3% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//
-//  word-break: break-word;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-valor44a48anos {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 3% !important;
-//  width: 3% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//
-//  word-break: break-word;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-valor49a53anos {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 3% !important;
-//  width: 3% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//
-//  word-break: break-word;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-valor54a58anos {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 3% !important;
-//  width: 3% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//
-//  word-break: break-word;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-valor59ouMaisAnos {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 3% !important;
-//  width: 3% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//
-//  word-break: break-word;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-reajuste{
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 3% !important;
-//  width: 3% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//
-//  word-break: break-word;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
+.mat-cell {
+  color: white;
+}
